# MysticBot

./: LICENSE  README.md  main.py  pyproject.toml
cogs/: github_cog.py  jira_cog.py
helper/: tables.py
